# scraper_utesa

./: .gitignore  Cargo.toml
src/: config.rs  entities.rs  formatter.rs  main.rs  parser.rs  scrapper.rs
