[package]
name = "scraper_utesa"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.13", features = ["json","native-tls","multipart", "cookies","form"] }
tokio = { version = "1", features = ["full"] }
scraper ={ version = "0.26.0" }
regex = "1.12.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4.44"
dotenvy = "0.15.7"
